nasa-powered heat map for slow loop page, ready for testing using live loop
